--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "darkfriend/devhelpers",
     "type": "library",
-    "description": "Classes helpers for developers",
-    "keywords": ["dev","helpers","darkfriend","debug","string","develop"],
+    "description": "Helper classes for developer",
+    "keywords": ["dev","helpers","darkfriend","debug","string","development","array"],
     "homepage": "https://github.com/darkfriend/devhelpers",
     "authors": [
         {
@@ -16,7 +16,8 @@
     "autoload":{
         "classmap":[
             "./DebugHelper.php",
-            "./StringHelper.php"
+            "./StringHelper.php",
+            "./ArrayHelper.php"
         ]
     }
 }
